Create dashboard container

--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
@@ -9,9 +9,11 @@
 	}
 
 	&-container {
-		box-shadow: $shadow-card;
 		max-width: 1024px;
 		margin: 0 auto;
+		&--settings{
+			max-width: 938px;
+		}
 	}
 
 	&-card {
