--- a/modules/ppcp-settings/resources/css/components/screens/onboarding/_step-welcome.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/onboarding/_step-welcome.scss
@@ -34,6 +34,12 @@
 	.components-base-control__field {
 		margin: 0 0 24px 0;
 	}
+	.ppcp-r-toggle-block__toggled-content > button{
+		padding: 6px 12px;
+		@include font(13, 20, 500);
+		color: $color-white;
+		border: none;
+	}
 }
 
 .ppcp-r-welcome-features {
@@ -81,3 +87,4 @@
 		}
 	}
 }
+
