--- a/modules/ppcp-settings/resources/css/_variables.scss
+++ b/modules/ppcp-settings/resources/css/_variables.scss
@@ -1,4 +1,5 @@
 $color-white: #fff;
+$color-black: #000;
 $color-blue: #1D35B4;
 $color-blueberry: #3858E9;
 $color-gray-900: #1E1E1E;
@@ -6,6 +7,7 @@ $color-gray-800: #2F2F2F;
 $color-gray-700: #757575;
 $color-gray-600: #949494;
 $color-gray-500: #BBBBBB;
+$color-gray-400: #CCCCCC;
 $color-gray-200: #E0E0E0;
 $color-gray: #646970;
 
