--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
@@ -4,14 +4,15 @@
 		width: 652px;
 		max-width: 100%;
 		margin: 0 auto;
-		padding:0 16px;
+		padding: 0 16px;
 		box-sizing: border-box;
 	}
 
 	&-container {
 		max-width: 1024px;
 		margin: 0 auto;
-		&--settings{
+
+		&--settings {
 			max-width: 938px;
 		}
 	}
@@ -19,5 +20,33 @@
 	&-card {
 		box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
 		background-color: $color-white;
+	}
+
+	&-settings-card {
+		background-color: $color-white;
+		padding: 48px;
+		border-radius: 8px;
+		box-shadow: 0 2px 4px 0 #0000001A;
+
+		&__header {
+			display: flex;
+			align-items: center;
+			gap: 18px;
+			padding-bottom: 18px;
+			border-bottom: 2px solid $color-gray-700;
+			margin-bottom: 32px;
+		}
+
+		&__title {
+			@include font(16, 24, 600);
+			color: $color-blueberry;
+			margin:0 0 4px 0;
+			display: block;
+		}
+		&__description{
+			@include font(14, 20, 400);
+			color:$color-gray-800;
+			margin:0;
+		}
 	}
 }
