--- a/modules/ppcp-settings/resources/css/style.scss
+++ b/modules/ppcp-settings/resources/css/style.scss
@@ -12,7 +12,10 @@
 	@import './components/reusable-components/settings-wrapper';
 	@import './components/reusable-components/select-box';
 	@import './components/reusable-components/navigation';
+	@import './components/reusable-components/tabs';
+	@import './components/reusable-components/fields';
 	@import './components/screens/onboarding/step-welcome';
 	@import './components/screens/onboarding/step-business';
 	@import './components/screens/onboarding/step-products';
+	@import './components/screens/dashboard/tab-dashboard';
 }
