--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
@@ -27,6 +27,9 @@
 		padding: 48px;
 		border-radius: 8px;
 		box-shadow: 0 2px 4px 0 #0000001A;
+		@media screen and (max-width: 480px) {
+			padding: 24px;
+		}
 
 		&__header {
 			display: flex;
@@ -40,13 +43,14 @@
 		&__title {
 			@include font(16, 24, 600);
 			color: $color-blueberry;
-			margin:0 0 4px 0;
+			margin: 0 0 4px 0;
 			display: block;
 		}
-		&__description{
+
+		&__description {
 			@include font(14, 20, 400);
-			color:$color-gray-800;
-			margin:0;
+			color: $color-gray-800;
+			margin: 0;
 		}
 	}
 }
