--- a/modules/ppcp-settings/resources/css/components/screens/dashboard/_tab-dashboard.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/dashboard/_tab-dashboard.scss
@@ -64,4 +64,119 @@
 		display: flex;
 		gap: 18px;
 	}
+
+	&__notes {
+		display: flex;
+		flex-direction: column;
+
+		span {
+			font-weight: 500;
+		}
+	}
+}
+
+.ppcp-r-connection-status {
+	display: flex;
+	gap: 32px;
+	padding-bottom: 48px;
+	margin-bottom: 48px;
+	border-bottom: 2px solid $color-gray-500;
+
+	&__status-status {
+		margin: 0 0 8px 0;
+
+		strong {
+			@include font(14, 20, 700);
+			color: $color-black;
+		}
+	}
+
+	&__show-all-data {
+		margin-left: 12px;
+
+		&:hover {
+			cursor: pointer;
+			opacity: 0.8;
+		}
+	}
+
+	&__status-label {
+		span {
+			@include font(12, 16, 400);
+			color: $color-gray-700;
+		}
+	}
+
+	&__data {
+		display: flex;
+		flex-direction: column;
+		gap: 12px;
+	}
+
+	&__status-row {
+		display: flex;
+		align-items: center;
+
+		strong {
+			@include font(14, 20, 600);
+			color: $color-gray-800;
+			margin-right: 12px;
+			white-space: nowrap;
+		}
+
+		span {
+			@include font(14, 20, 400);
+			color: $color-gray-800;
+		}
+	}
+
+	@media screen and (max-width: 767px) {
+		flex-wrap: wrap;
+		&__status {
+			width: 100%;
+		}
+		&__status-row {
+			flex-wrap: wrap;
+			strong{
+				width: 100%;
+			}
+			span{
+				word-break:break-all;
+			}
+		}
+	}
+}
+
+.ppcp-r-feature-refresh {
+	display: flex;
+	gap: 12px;
+	margin-bottom: 24px;
+
+	&__row {
+		display: flex;
+		align-items: center;
+	}
+
+	&__content {
+		width: 100%;
+
+		&-title {
+			@include font(16, 20, 700);
+			color: $color-black;
+			display: block;
+			margin: 0 0 4px 0;
+		}
+
+		p {
+			@include font(12, 20, 400);
+			color: $color-gray-700;
+			margin: 0;
+		}
+	}
+
+	button {
+		display: flex;
+		gap: 4px;
+		@include font(13, 20, 400);
+	}
 }
