--- a/modules/ppcp-settings/resources/css/style.scss
+++ b/modules/ppcp-settings/resources/css/style.scss
@@ -14,6 +14,7 @@
 	@import './components/reusable-components/navigation';
 	@import './components/reusable-components/tabs';
 	@import './components/reusable-components/fields';
+	@import './components/reusable-components/title-badge';
 	@import './components/screens/onboarding/step-welcome';
 	@import './components/screens/onboarding/step-business';
 	@import './components/screens/onboarding/step-products';
