💄 Style the new TabNavigation component

--- a/modules/ppcp-settings/resources/css/_variables.scss
+++ b/modules/ppcp-settings/resources/css/_variables.scss
@@ -6,6 +6,7 @@ $color-gray-800: #2F2F2F;
 $color-gray-700: #757575;
 $color-gray-600: #949494;
 $color-gray-500: #BBBBBB;
+$color-gray-400: #CCCCCC;
 $color-gray-200: #E0E0E0;
 $color-gray: #646970;
 
