--- a/modules/ppcp-settings/resources/css/components/reusable-components/_tab-navigation.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_tab-navigation.scss
@@ -2,6 +2,10 @@
 	--wp-components-color-accent: #{$color-blueberry};
 	--wp-admin-border-width-focus: 3px;
 
+	max-width: var(--max-tabbar-width);
+	margin: 0 auto;
+	transition: max-width 0.2s;
+
 	.components-tab-panel__tabs {
 		box-shadow: 0 -1px 0 0 $color-gray-400 inset;
 		margin-bottom: 48px;
