--- a/modules/ppcp-settings/resources/css/components/screens/_onboarding.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/_onboarding.scss
@@ -1,3 +1,7 @@
 @import './onboarding/step-welcome';
 @import './onboarding/step-business';
 @import './onboarding/step-products';
+
+.ppcp-r-tabs.onboarding {
+	--max-tabbar-width: var(--max-width-onboarding);
+}
