--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
@@ -8,8 +8,12 @@
 	&-inner-container {
 		margin-left: auto;
 		margin-right: auto;
-		padding: 0 16px;
+		padding: 0 16px 72px;
 		box-sizing: border-box;
+
+		@media screen and (max-width: 480px) {
+			padding-bottom: 36px;
+		}
 	}
 
 	&-container {
