Insert missing links

--- a/modules/ppcp-settings/resources/css/components/reusable-components/_select-box.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_select-box.scss
@@ -82,6 +82,10 @@
 	&__checkbox-presentation {
 		@include fake-input-field(2px);
 	}
+	&__additional-content{
+		position: relative;
+		z-index: 1;
+	}
 
 	@media screen and (max-width: 480px) {
 		gap: 16px;
