--- a/modules/ppcp-settings/resources/css/components/reusable-components/_onboarding-header.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_onboarding-header.scss
@@ -1,29 +1,15 @@
 .ppcp-r-onboarding-header{
 	margin: 0 0 32px 0;
 
-	&__gradient {
-		background: $gradient-header;
-		width: 100%;
-		height: 112px;
-		position: relative;
-		margin-bottom: 55px;
+	&__logo {
+		text-align: center;
+		margin-bottom: 20px;
 	}
 
 	&__logo-wrapper {
-		width: 110px;
-		height: 110px;
-		background-color: $color-white;
-		border-radius: 110px;
-		position: absolute;
-		left: calc(50% - 55px);
-		bottom: -55px;
-
 		img {
-			width: 56px;
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%);
+			width: 110px;
+			height: 38px;
 		}
 	}
 
@@ -38,7 +24,6 @@
 
 	&__title {
 		@include font(20, 28, 700);
-		color: $color-blue;
 		margin: 0 0 4px 0;
 		text-align: center;
 	}
