--- a/modules/ppcp-settings/resources/css/components/screens/onboarding/_step-welcome.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/onboarding/_step-welcome.scss
@@ -4,12 +4,16 @@
 	}
 
 	.ppcp-r-payment-method-icons {
-		margin: 0 0 12px 0;
+		margin: 0 0 32px 0;
 	}
 
 	.ppcp-r-button-activate-paypal {
 		display: block;
-		margin: 0 auto 32px auto;
+		margin: 0 auto;
+	}
+
+	.ppcp-r-button__description {
+		text-align: center;
 	}
 
 	.ppcp-r-page-welcome-or-separator {
@@ -17,7 +21,7 @@
 	}
 
 	.ppcp-r-page-welcome-mode-separator {
-		margin: 32px 0;
+		margin: 0 0 64px 0;
 
 		.ppcp-r-separator__line {
 			background-color: $color-gray-500;
@@ -62,6 +66,58 @@
 			border-right: 1px solid $color-gray-200;
 			margin-right: 18px;
 		}
+	}
+
+	@media screen and (max-width: 480px) {
+		flex-wrap: wrap;
+		row-gap: 8px;
+		&__col {
+			width: 100%;
+			text-align: center;
+
+			&:not(:last-child) {
+				border-bottom: 1px solid $color-gray-200;
+				border-right: 0;
+				padding-right: 0;
+				padding-bottom: 8px;
+			}
+		}
+	}
+}
+
+.ppcp-r-welcome-docs {
+
+	&__title {
+		text-align: center;
+	}
+
+	&__wrapper {
+		display: flex;
+		justify-content: center;
+		padding: 8px;
+	}
+
+	&__col {
+		display: flex;
+		flex-direction: column;
+		gap: 4px;
+		flex: 1;
+
+		> p {
+			margin: 0;
+			@include font(13, 16, 400);
+			color: $color-gray-700;
+		}
+
+		&:not(:last-child) {
+			padding-right: 24px;
+			border-right: 1px solid $color-gray-200;
+			margin-right: 24px;
+		}
+	}
+
+	.ppcp-r-page-welcome-mode-separator {
+		margin: 8px 0 16px 0;
 	}
 
 	@media screen and (max-width: 480px) {
