--- a/modules/ppcp-settings/resources/css/style.scss
+++ b/modules/ppcp-settings/resources/css/style.scss
@@ -9,6 +9,7 @@
 	@import './components/reusable-components/text-control';
 	@import './components/reusable-components/separator';
 	@import './components/reusable-components/payment-method-icons';
+	@import "./components/reusable-components/payment-method-item";
 	@import './components/reusable-components/settings-wrapper';
 	@import './components/reusable-components/select-box';
 	@import './components/reusable-components/tab-navigation';
