--- a/modules/ppcp-settings/resources/css/style.scss
+++ b/modules/ppcp-settings/resources/css/style.scss
@@ -15,7 +15,8 @@
 	@import './components/reusable-components/navigation';
 	@import './components/reusable-components/fields';
 	@import './components/reusable-components/title-badge';
-	@import './components/reusable-components/_badge-box.scss';
+	@import './components/reusable-components/accordion-section';
+	@import './components/reusable-components/badge-box';
 	@import './components/screens/onboarding';
 	@import './components/screens/dashboard/tab-dashboard';
 }
