--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-toggle-block.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-toggle-block.scss
@@ -3,6 +3,7 @@
 		display: flex;
 		width: 100%;
 		gap: 12px;
+		justify-content: space-between;
 	}
 
 	&__switch {
@@ -16,6 +17,7 @@
 		display: block;
 		margin: 0 0 4px 0;
 		color: $color-gray-900;
+		cursor: pointer;
 	}
 
 	&__content-description {
