💄 Enhance AccordionSection UI and flexibility

--- a/modules/ppcp-settings/resources/css/components/screens/onboarding/_step-welcome.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/onboarding/_step-welcome.scss
@@ -37,6 +37,10 @@
 		color: $color-white;
 		border: none;
 	}
+
+	.onboarding-advanced-options {
+		max-width: 800px;
+	}
 }
 
 .ppcp-r-welcome-features {
