✨ Add simple Spinner overlay component

--- a/modules/ppcp-settings/resources/css/style.scss
+++ b/modules/ppcp-settings/resources/css/style.scss
@@ -18,6 +18,7 @@
 	@import './components/reusable-components/title-badge';
 	@import './components/reusable-components/accordion-section';
 	@import './components/reusable-components/badge-box';
+	@import './components/reusable-components/spinner-overlay';
 	@import './components/screens/onboarding';
 	@import './components/screens/dashboard/tab-dashboard';
 	@import './components/screens/dashboard/tab-payment-methods';
