💄 Enhance SettingsToggleBlock with loading state

--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-toggle-block.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-toggle-block.scss
@@ -1,4 +1,6 @@
 .ppcp-r-toggle-block {
+	position: relative;
+
 	&__wrapper {
 		display: flex;
 		width: 100%;
@@ -28,5 +30,11 @@
 
 	&__toggled-content {
 		margin-top: 24px;
+	}
+
+	&.ppcp--is-loading {
+		pointer-events: none;
+
+		--spinner-overlay-color: #fff4;
 	}
 }
