🎨 Only target root container in global styles

--- a/modules/ppcp-settings/resources/css/_global.scss
+++ b/modules/ppcp-settings/resources/css/_global.scss
@@ -40,8 +40,7 @@
 	font-style: italic;
 }
 
-
-* {
+& {
 	font-family: "PayPalPro", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	box-sizing: border-box;
