Improve mobile styles

--- a/modules/ppcp-settings/resources/css/components/screens/_onboarding-global.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/_onboarding-global.scss
@@ -1,7 +1,7 @@
 body:has(.ppcp-r-container--onboarding) {
 	background-color: #fff !important;
 
-	.notice, .nav-tab-wrapper.woo-nav-tab-wrapper, .woocommerce-layout {
+	.notice, .nav-tab-wrapper.woo-nav-tab-wrapper, .woocommerce-layout, .wrap.woocommerce h2:first-of-type {
 		display: none !important;
 	}
 }
