--- a/modules/ppcp-settings/resources/css/components/reusable-components/_navigation.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_navigation.scss
@@ -1,54 +1,60 @@
-.ppcp-r-navigation {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.ppcp-r-navigation-container {
 	padding: 24px 48px;
 	margin: 0 -20px 48px -20px;
 	border-bottom: 1px solid $color-gray-300;
 	position: relative;
 
-	button.is-primary {
-		padding: 10px 18px;
-		justify-content: center;
-		margin: 0 0 0 12px;
-		&:not(:disabled) {
+	.ppcp-r-navigation {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		button.is-primary {
+			padding: 10px 18px;
+			justify-content: center;
+			margin: 0 0 0 12px;
+			&:not(:disabled) {
+				background-color: $color-blueberry;
+			}
+		}
+
+		button.is-tertiary {
+			@include font(16, 24, 600);
+			color: $color-gray-900;
+			&:hover{
+				background-color:none;
+				background:none;
+			}
+
+			span {
+				padding: 0 12px 0 0;
+			}
+		}
+
+		&--right a{
+			@include font(13, 20, 400);
+			color: $color-blueberry;
+			text-decoration: none;
+		}
+
+		&--progress-bar {
+			position: absolute;
+			bottom: 0px;
+			left: 0;
 			background-color: $color-blueberry;
+			height: 4px;
 		}
-	}
-
-	button.is-tertiary {
-		@include font(16, 24, 600);
-		color: $color-gray-900;
-		&:hover{
-			background-color:none;
-			background:none;
-		}
-
-		span {
-			padding: 0 12px 0 0;
-		}
-	}
-
-	&--right a{
-		@include font(13, 20, 400);
-		color: $color-blueberry;
-		text-decoration: none;
-	}
-
-	&--progress-bar {
-		position: absolute;
-		bottom: 0px;
-		left: 0;
-		background-color: $color-blueberry;
-		height: 4px;
 	}
 
 	@media screen and (max-width: 480px) {
-		flex-wrap: wrap;
-		row-gap: 8px;
+		padding: 24px 35px;
+		.ppcp-r-navigation {
+			flex-wrap: wrap;
+			row-gap: 8px;
 
-		&--progress-bar {
-			display:none;
+			&--progress-bar {
+				display: none;
+			}
 		}
 	}
 }
