--- a/modules/ppcp-settings/resources/css/_mixins.scss
+++ b/modules/ppcp-settings/resources/css/_mixins.scss
@@ -26,3 +26,9 @@
 	pointer-events: none;
 	border-radius: $border-radius;
 }
+
+@mixin small-button{
+	border-radius: 2px;
+	padding: 6px 12px;
+	@include font(13, 20, 400);
+}
