--- a/modules/ppcp-settings/resources/css/components/reusable-components/_payment-method-modal.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_payment-method-modal.scss
@@ -69,8 +69,6 @@
 
 
 		input[type='text'] {
-			padding: 7px 11px;
-			@include font(14, 20, 400);
 			margin: 0;
 			border-color: $color-gray-700;
 		}
@@ -92,9 +90,7 @@
 	}
 
 	.ppcp-r-modal__field-row--save button.is-primary {
-		border-radius: 2px;
-		padding: 6px 12px;
-		@include font(13, 20, 400);
+		@include small-button;
 	}
 
 	&__content-title {
@@ -108,16 +104,5 @@
 		@include font(14, 20, 400);
 		margin: 0 0 24px 0;
 		color: $color-black;
-	}
-
-	&__field-rdb {
-		display: flex;
-		gap: 18px;
-		align-items: center;
-		position: relative;
-		label {
-			@include font(14, 20, 400);
-			color: $color-black;
-		}
 	}
 }
