--- a/modules/ppcp-settings/resources/css/style.scss
+++ b/modules/ppcp-settings/resources/css/style.scss
@@ -20,6 +20,7 @@
 	@import './components/screens/onboarding';
 	@import './components/screens/dashboard/tab-dashboard';
 	@import './components/screens/dashboard/tab-payment-methods';
+	@import './components/screens/dashboard/tab-settings';
 }
 
 @import './components/reusable-components/payment-method-modal';
