Finish settings page

--- a/modules/ppcp-settings/resources/css/_global.scss
+++ b/modules/ppcp-settings/resources/css/_global.scss
@@ -40,6 +40,9 @@
 	font-style: italic;
 }
 
+@mixin primaryFont{
+	font-family: "PayPalPro", sans-serif;
+}
 
 * {
 	font-family: "PayPalPro", sans-serif;
@@ -56,16 +59,4 @@ a:not(.button) {
 	color: $color-blueberry;
 }
 
-input[type='text'] {
-	padding: 7px 11px;
-	@include font(14, 20, 400);
-}
 
-select {
-	padding: 7px 27px 7px 11px;
-	@include font(14, 20, 400);
-}
-
-.components-form-toggle.is-checked > .components-form-toggle__track {
-	background-color: $color-blueberry;
-}
