--- a/modules/ppcp-settings/resources/css/_global.scss
+++ b/modules/ppcp-settings/resources/css/_global.scss
@@ -44,10 +44,13 @@
 	font-family: "PayPalPro", sans-serif;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 & {
 	font-family: "PayPalPro", sans-serif;
 	-webkit-font-smoothing: antialiased;
-	box-sizing: border-box;
 	color: $color-gray-700;
 }
 
