Payment cards redesign #2

--- a/modules/ppcp-settings/resources/css/_variables.scss
+++ b/modules/ppcp-settings/resources/css/_variables.scss
@@ -11,6 +11,9 @@ $color-gray-400: #CCCCCC;
 $color-gray-300: #EBEBEB;
 $color-gray-200: #E0E0E0;
 $color-gray: #646970;
+$color-text-tertiary: #505050;
+$color-text-text: #070707;
+$color-border:#AEAEAE;
 
 $shadow-card: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
 $shadow-selection-box: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
