--- a/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_settings-wrapper.scss
@@ -17,21 +17,35 @@
 	}
 
 	&-settings-card {
-		background-color: $color-white;
-		padding: 48px;
-		border-radius: 8px;
-		box-shadow: 0 2px 4px 0 #0000001A;
+		@media screen and (min-width: 960px) {
+			display: flex;
+			gap: 48px;
+		}
+
 		@media screen and (max-width: 480px) {
 			padding: 24px;
 		}
 
 		&__header {
 			display: flex;
-			align-items: center;
 			gap: 18px;
 			padding-bottom: 18px;
 			border-bottom: 2px solid $color-gray-700;
 			margin-bottom: 32px;
+
+			@media screen and (min-width: 960px) {
+				width: 280px;
+				flex-shrink: 0;
+				border-bottom: none;
+				margin-bottom: 0;
+				padding-bottom: 0;
+			}
+		}
+
+		&__content {
+			@media screen and (min-width: 960px) {
+				flex: 1;
+			}
 		}
 
 		&__title {
