--- a/modules/ppcp-settings/resources/css/components/reusable-components/_payment-method-modal.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_payment-method-modal.scss
@@ -15,7 +15,7 @@
 
 		&__content {
 			margin-top: 60px;
-			padding:0 24px 28px 24px;
+			padding: 0 24px 28px 24px;
 		}
 	}
 
@@ -94,6 +94,36 @@
 
 			.ppcp-r-modal__field-row--save {
 				margin-top: 2px;
+			}
+		}
+
+		.components-radio-control {
+			.components-flex {
+				gap: 18px;
+			}
+
+			label {
+				@include font(14, 20, 400);
+				color: $color-black;
+			}
+
+			&__option {
+				gap: 18px;
+			}
+
+			&__input {
+				border-color: $color-gray-700;
+				margin-right: 0;
+				&:checked {
+					border: 1px solid $color-gray-700;
+					background-color: $color-white;
+
+					&::before {
+						transform: translate(3px, 3px);
+						border-width: 6px;
+						border-color: $color-blueberry;
+					}
+				}
 			}
 		}
 	}
