--- a/modules/ppcp-settings/resources/css/style.scss
+++ b/modules/ppcp-settings/resources/css/style.scss
@@ -24,6 +24,7 @@
 	@import './components/screens/overview/tab-overview';
 	@import './components/screens/overview/tab-payment-methods';
 	@import './components/screens/overview/tab-settings';
+	@import './components/screens/overview/tab-styling';
 }
 
 @import './components/reusable-components/payment-method-modal';
