--- a/modules/ppcp-settings/resources/css/components/screens/overview/_tab-overview.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/overview/_tab-overview.scss
@@ -18,10 +18,6 @@
 		padding-top: 24px;
 	}
 
-	p {
-		@include font(14, 20, 400);
-	}
-
 	&__inner {
 		position: relative;
 		display: flex;
@@ -35,6 +31,16 @@
 		&:hover {
 			cursor: pointer;
 			color: $color-blueberry;
+		}
+	}
+
+	.ppcp-r__checkbox {
+		.components-flex {
+			gap: 12px;
+		}
+		label{
+			@include font(13, 20, 400);
+			color:$color-blueberry;
 		}
 	}
 }
@@ -108,18 +114,20 @@
 		gap: 12px;
 	}
 
-	&__status-toggle--toggled{
-		.ppcp-r-connection-status__show-all-data{
-			transform:rotate(180deg);
+	&__status-toggle--toggled {
+		.ppcp-r-connection-status__show-all-data {
+			transform: rotate(180deg);
 		}
 	}
 
 	&__status-row {
 		display: flex;
 		align-items: center;
-		*{
+
+		* {
 			user-select: none;
 		}
+
 		strong {
 			@include font(14, 24, 600);
 			color: $color-gray-800;
@@ -131,11 +139,13 @@
 			@include font(14, 24, 400);
 			color: $color-gray-800;
 		}
-		.ppcp-r-connection-status__status-toggle{
+
+		.ppcp-r-connection-status__status-toggle {
 			line-height: 0;
 		}
-		&--first{
-			&:hover{
+
+		&--first {
+			&:hover {
 				cursor: pointer;
 			}
 		}
@@ -148,11 +158,13 @@
 		}
 		&__status-row {
 			flex-wrap: wrap;
-			strong{
+
+			strong {
 				width: 100%;
 			}
-			span{
-				word-break:break-all;
+
+			span {
+				word-break: break-all;
 			}
 		}
 	}
