--- a/modules/ppcp-settings/resources/css/components/reusable-components/_welcome-docs.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_welcome-docs.scss
@@ -4,7 +4,7 @@
 	&__title {
 		text-align: center;
 		@include font(20, 28, 700);
-		margin: 0 0 32px 0;
+		margin: 32px 0 32px 0;
 	}
 
 	&__wrapper {
