--- a/modules/ppcp-settings/resources/css/components/reusable-components/_button.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_button.scss
@@ -5,7 +5,7 @@ button.components-button, a.components-button {
 		}
 
 		&:disabled {
-			color: $color-white;
+			color: $color-gray-700;
 		}
 
 		border-radius: 50px;
