✨ Add scroll-effect (shadow) to header bar

--- a/modules/ppcp-settings/resources/css/components/reusable-components/_navigation.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_navigation.scss
@@ -8,6 +8,7 @@
 
 	box-shadow: 0 -1px 0 0 $color-gray-300 inset;
 	background: var(--ppcp-color-app-bg);
+	transition: box-shadow 0.3s;
 
 	--wp-components-color-accent: #{$color-blueberry};
 	--color-text: #{$color-gray-900};
@@ -76,6 +77,10 @@
 			height: 4px;
 			transition: width 0.3s;
 		}
+	}
+
+	&.is-scrolled {
+		box-shadow: 0 -1px 0 0 $color-gray-300 inset, 0 8px 8px 0 rgba(85,93,102,.3);
 	}
 
 	@media screen and (max-width: 480px) {
