--- a/modules/ppcp-settings/resources/css/components/screens/_fullscreen.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/_fullscreen.scss
@@ -2,7 +2,8 @@ body:has(.ppcp-r-container--settings),
 body:has(.ppcp-r-container--onboarding) {
 	background-color: var(--ppcp-color-app-bg) !important;
 
-	.woocommerce-layout {
+	.woocommerce-layout,
+	#woocommerce-layout__primary {
 		padding: 0 !important;
 	}
 
