Update the Settings UI design to match the Figma files

--- a/modules/ppcp-settings/resources/css/components/reusable-components/_button.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_button.scss
@@ -18,6 +18,7 @@ button.components-button, a.components-button {
 
 		&:not(:disabled) {
 			background-color: $color-blueberry;
+			color: $color-white;
 		}
 	}
 
