--- a/modules/ppcp-settings/resources/css/_variables.scss
+++ b/modules/ppcp-settings/resources/css/_variables.scss
@@ -13,7 +13,8 @@ $color-gray-200: #E0E0E0;
 $color-gray: #646970;
 $color-text-tertiary: #505050;
 $color-text-text: #070707;
-$color-border:#AEAEAE;
+$color-border: #AEAEAE;
+$color-divider: #F0F0F0;
 
 $shadow-card: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
 $shadow-selection-box: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
@@ -23,6 +24,8 @@ $gradient-header: linear-gradient(87.03deg, #003087 -0.49%, #001E51 29.22%, $col
 $max-width-onboarding: 1024px;
 $max-width-onboarding-content: 500px;
 $max-width-settings: 938px;
+
+$card-vertical-gap: 48px;
 
 #ppcp-settings-container {
 	--max-width-settings: #{$max-width-settings};
