--- a/modules/ppcp-settings/resources/css/_variables.scss
+++ b/modules/ppcp-settings/resources/css/_variables.scss
@@ -10,6 +10,7 @@ $color-gray-500: #BBBBBB;
 $color-gray-400: #CCCCCC;
 $color-gray-300: #EBEBEB;
 $color-gray-200: #E0E0E0;
+$color-gray-100: #F0F0F0;
 $color-gray: #646970;
 $color-text-tertiary: #505050;
 $color-text-text: #070707;
@@ -27,6 +28,8 @@ $max-width-settings: 938px;
 
 $card-vertical-gap: 48px;
 
+/* define custom theming options */
+
 :root {
 	--ppcp-color-app-bg: #{$color-white};
 }
@@ -37,4 +40,18 @@ $card-vertical-gap: 48px;
 	--max-width-onboarding-content: #{$max-width-onboarding-content};
 
 	--max-container-width: var(--max-width-settings);
+
+	--color-black: #{$color-black};
+	--color-white: #{$color-white};
+	--color-blueberry: #{$color-blueberry};
+	--color-gray-900: #{$color-gray-900};
+	--color-gray-800: #{$color-gray-800};
+	--color-gray-700: #{$color-gray-700};
+	--color-gray-600: #{$color-gray-600};
+	--color-gray-500: #{$color-gray-500};
+	--color-gray-400: #{$color-gray-400};
+	--color-gray-300: #{$color-gray-300};
+	--color-gray-200: #{$color-gray-200};
+	--color-gray-100: #{$color-gray-100};
+	--color-gradient-dark: #{$color-gradient-dark};
 }
