--- a/modules/ppcp-settings/resources/css/components/reusable-components/_select-box.scss
+++ b/modules/ppcp-settings/resources/css/components/reusable-components/_select-box.scss
@@ -58,6 +58,13 @@
 	&__content {
 		display: flex;
 		position: relative;
+		pointer-events: none;
+		*:not(a){
+			pointer-events: none;
+		}
+		a {
+			pointer-events: all;
+		}
 	}
 
 	&__title {
