Add Help Center section in the overview tab

--- a/modules/ppcp-settings/resources/css/components/screens/_settings.scss
+++ b/modules/ppcp-settings/resources/css/components/screens/_settings.scss
@@ -11,10 +11,6 @@
 }
 
 // Todo List and Feature Items
-.ppcp-r-tab-overview-todo {
-	margin: 0 0 48px 0;
-}
-
 .ppcp-r-todo-item {
 	position: relative;
 	display: flex;
@@ -231,6 +227,10 @@
 }
 
 // Settings Card and Block Styles
+.ppcp-r-settings-card {
+	margin: 0 0 48px 0;
+}
+
 .ppcp-r-settings-card__content {
 	> .ppcp-r-settings-block {
 		&:not(:last-child) {
